2009-01-11  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (describe-face): Ignore anonymous faces.

	* server.el (server-save-buffers-kill-terminal): Args changed.
	Handle nowait client frames.

	* files.el (save-buffers-kill-terminal): Args for
	server-save-buffers-kill-terminal changed.

2009-01-11  Juanma Barranquero  <lekktu@gmail.com>

	* international/fontset.el (create-fontset-from-fontset-spec): Doc fix.

2009-01-11  Glenn Morris  <rgm@gnu.org>

	* diff-mode.el (whitespace-style, whitespace-trailing-regexp):
	Silence compiler.

	* emacs-lisp/authors.el (authors-aliases): Add, remove, and adjust
	some entries.
	(authors-fixed-case, authors-ignored-files, authors-valid-file-names):
	(authors-renamed-files-alist): Add entries.
	(authors-fixed-entries): Update for renamed and removed files.
	(authors-canonical-file-name): Add entries to
	authors-checked-files-alist based on their full names, expanded relative
	to each log-file directory.
	(authors-scan-el, authors-add-to-author-list, authors):
	Handle multiple authors in a file, via a new :cowrote category.

	* emacs-lisp/copyright.el (copyright-update): Add doc-string.

2009-01-10  Richard M Stallman  <rms@gnu.org>

	* mail/mail-utils.el (mail-quote-printable-region): New function.

2009-01-10  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-move.el (calendar-scroll-left-three-months)
	(calendar-scroll-right-three-months):
	* calendar/holidays.el (calendar-list-holidays)
	(calendar-mark-holidays):
	* calendar/lunar.el (calendar-lunar-phases):
	Add event handling, for when called from menus with the calendar buffer
	not current.

2009-01-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* diff-mode.el (diff-show-trailing-whitespaces): Remove function.
	Move setting up whitepace-mode ...
	(diff-mode): ... here.
	(diff-mode-menu): Add a menu entry for showing trailing whitespace.

2009-01-10  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (x-font-family-list): Remove entirely.
