@@ -1,3 +1,9 @@
+2009-01-11  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-lang.el (math-compose-tex-sqrt): New function.
+	(math-special-function-table): Use `math-compose-tex-sqrt' to
+	compose sqrts in TeX and LaTeX mode.
+
 2009-01-11  Chong Yidong  <cyd@stupidchicken.com>
 
 	* faces.el (describe-face): Ignore anonymous faces.
